--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="navbar 3">
         <circle>
-            <A style="display: inline-flex;">
+            <A style="display:  flex;">
                 <h1> Weather APP</h1>
             </A>
         </circle>
